// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword renders an error message 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Reset your password
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": undefined,
      }
    }
    accessible={true}
    style={
      Array [
        Object {
          "alignItems": "flex-start",
        },
        Object {
          "paddingVertical": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "black",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "row",
          "padding": 8,
          "width": "100%",
        }
      }
    >
      <TextInput
        accessible={true}
        editable={true}
        placeholder="Enter your username"
        style={
          Array [
            Object {
              "flexGrow": 1,
              "fontSize": 16,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f5bcbc",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        Object {
          "marginBottom": 16,
        },
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      Test error message
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#317d95",
        "borderRadius": 4,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "#fff",
          },
        ]
      }
    >
      Send code
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "#317d95",
            "paddingVertical": 20,
          },
        ]
      }
    >
      Back to Sign In
    </Text>
  </View>
</View>
`;

exports[`ResetPassword renders as expected 1`] = `
Array [
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Text
      accessibilityRole="header"
      style={
        Array [
          Object {
            "color": "black",
          },
          Object {
            "fontSize": 34,
            "fontWeight": "300",
            "lineHeight": 51,
          },
          undefined,
        ]
      }
    >
      Reset your password
    </Text>
    <View
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "paddingVertical": 16,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          editable={true}
          placeholder="Enter your username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#317d95",
          "borderRadius": 4,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Object {
              "color": "#fff",
            },
          ]
        }
      >
        Send code
      </Text>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Object {
              "color": "#317d95",
              "paddingVertical": 20,
            },
          ]
        }
      >
        Back to Sign In
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  />,
]
`;
